made minior changes

--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -1,1 +1,19 @@
 <h1>Index Tasks</h1>
+
+<div class="columns is-multiline">
+  <div ng-repeat=' task in tasksIndex.all' class="column is-half-tablet is-one-third-desktop">
+      <div class="card">
+        <div class="card-image"></div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <p class="title is-4">{{ task.title }}</p>
+              <p class="title is-4">{{ task.description }}</p>
+              <p class="title is-4">{{ task.points }}</p>
+              <p class="title is-4">{{ task.dueDate }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
