--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -1,4 +1,4 @@
-<h1>Index Tasks</h1>
+<h1 ng-init="main.setCurrentUser()">Index Tasks</h1>
 
 <div class="columns is-multiline">
   <div ng-repeat=' task in tasksIndex.all' class="column is-half-tablet is-one-third-desktop">
