--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -14,6 +14,8 @@
             </div>
           </div>
         </div>
+        <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
+
       </div>
   </div>
 </div>
