Weekend work done

--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -25,7 +25,7 @@
   <div class="field">
     <label for="dueDate">DueDate</label>
     <p>{{task.dueDate}}</p>
-    <input class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
+    <input  type="date" class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
   </div>
   <div class="field">
     <label for="dueDate">Time</label>
