--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -15,6 +15,7 @@
           </div>
         </div>
         <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
+        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
 
       </div>
   </div>
