--- a/src/views/tasks/new.html
+++ b/src/views/tasks/new.html
@@ -6,10 +6,24 @@
           <select ng-model="tasksNew.data.title">
             <option>Your Task?</option>
             <option value="dishwashing">Dishwashing</option>
-            <option value="walkingTheDog">Walking the Dog</option>
-            <option value="cleanTheKitchen">Clean the kitchen</option>
             <option value="takeOutRecyclingAndBins">Take out Recycling and Bins</option>
-            <option value="foodShopping">Food shopping</option>
+            <option value="changeTheBedSheets">Change the bed sheets</option>
+            <option value="takeCareOfBins">Take out bins and recycling</option>
+            <option value="checkAndChangeLightbulbs">Check and change light bulbs</option>
+            <option value="cleanKitchen">Clean Kitchen</option>
+            <option value="cleanBathroom">Clean Bathroom</option>
+            <option value="cleanBedroom">Clean Bedroom</option>
+            <option value="cleanLivingRoom">Clean Living Room</option>
+            <option value="deepClean">Deep-Clean</option>
+            <option value="foodShopping">food Shopping</option>
+            <option value="cleaningEquipment">Cleaning Equipment</option>
+            <option value="ikea">Ikea</option>
+            <option value="walkTheDog">Walk the Dog</option>
+            <option value="cleanOutTheCar">Clean out the Car</option>
+            <option value="workOnGarden">Work on Garden</option>
+            <option value="exercise">Exercise</option>
+            <option value="updatingComputerSoftware">Updating computer/software</option>
+            <option value="clothesWashing">Clothes Washing</option>
           </select>
         </div>
       </div>
