--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
-        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
+        <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>4
       </div>
   </div>
 </div>
