Resolved bugs, added flash messages for task actions

--- a/src/views/auth/edit.html
+++ b/src/views/auth/edit.html
@@ -8,12 +8,12 @@
     <input class="input" placeholder="Email" name="email" ng-model="usersEdit.user.email" />
   </div>
   <div class="field">
-    <label for="password">Password</label>
-    <input class="input" type="password" placeholder="Password" name="password" ng-model="usersEdit.user.password" />
+    <!-- <label for="password">Password</label> -->
+    <input class="input" type="hidden" placeholder="Password" name="password" ng-model="usersEdit.user.password" />
   </div>
   <div class="field">
-    <label for="passwordConfirmation">Password Confirmation</label>
-    <input class="input" type="password" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
+    <!-- <label for="passwordConfirmation">Password Confirmation</label> -->
+    <input class="input" type="hidden" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
   </div>
 
   <button class="button is-primary">Submit</button>
