--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -35,6 +35,7 @@
               <p class="title is-4">{{ task.dueDate }}</p>
             </div>
           </div>
+          <div class="map" g-map center="tasksIndex.task.location">GOOGLE MAP GOES HERE</div>
         </div>
         <a class="button" ui-sref='tasksEdit({ id: main.currentUser._id, taskId: task._id })'>Edit</a>
         <button ng-click="tasksIndex.handleComplete(main.currentUser._id,task._id)" class="button">Complete</button>
