--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -28,7 +28,7 @@
   </div>
   <div class="field">
     <label for="location">Location</label>
-    <input class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
+    <input value="{{task.location}}" class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
   </div>
   <div class="field">
     <label for="dueDate">Time</label>
