--- a/src/views/tasks/new.html
+++ b/src/views/tasks/new.html
@@ -28,10 +28,10 @@
         </div>
       </div>
     </div>
-  <div class="field">
+  <!-- <div class="field">
     <label for="points">Points</label>
     <input class="input" placeholder="Points" name="points" ng-model="tasksNew.data.points"/>
-  </div>
+  </div> -->
   <div class="field">
     <label for="description">Description</label>
     <input class="input" placeholder="Description" name="description" ng-model="tasksNew.data.description"/>
