--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -4,20 +4,34 @@
       <div class="control">
         <div class="select is-primary">
           <select ng-model="tasksEdit.task.title">
-            <option value="{{task.title}}">{{task.title}}</option>
+            <option>Your Task?</option>
             <option value="dishwashing">Dishwashing</option>
-            <option value="walkingTheDog">Walking the Dog</option>
-            <option value="cleanTheKitchen">Clean the kitchen</option>
             <option value="takeOutRecyclingAndBins">Take out Recycling and Bins</option>
-            <option value="foodShopping">Food shopping</option>
+            <option value="changeTheBedSheets">Change the bed sheets</option>
+            <option value="takeCareOfBins">Take out bins and recycling</option>
+            <option value="checkAndChangeLightbulbs">Check and change light bulbs</option>
+            <option value="cleanKitchen">Clean Kitchen</option>
+            <option value="cleanBathroom">Clean Bathroom</option>
+            <option value="cleanBedroom">Clean Bedroom</option>
+            <option value="cleanLivingRoom">Clean Living Room</option>
+            <option value="deepClean">Deep-Clean</option>
+            <option value="foodShopping">food Shopping</option>
+            <option value="cleaningEquipment">Cleaning Equipment</option>
+            <option value="ikea">Ikea</option>
+            <option value="walkTheDog">Walk the Dog</option>
+            <option value="cleanOutTheCar">Clean out the Car</option>
+            <option value="workOnGarden">Work on Garden</option>
+            <option value="exercise">Exercise</option>
+            <option value="updatingComputerSoftware">Updating computer/software</option>
+            <option value="clothesWashing">Clothes Washing</option>
           </select>
         </div>
       </div>
     </div>
-  <div class="field">
+  <!-- <div class="field">
     <label for="points">Points</label>
     <input value="{{task.points}}" class="input" placeholder="Points" name="points" ng-model="tasksEdit.task.points"/>
-  </div>
+  </div> -->
   <div class="field">
     <label for="description">Description</label>
     <input value="{{task.description}}" class="input" placeholder="Description" name="description" ng-model="tasksEdit.task.description"/>
@@ -28,11 +42,11 @@
   </div>
   <div class="field">
     <label for="location">Location</label>
-    <input value="{{task.location}}" class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
+    <input class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
   </div>
   <div class="field">
     <label for="dueDate">Time</label>
-    <input value="{{task.time}}" class="input" placeholder="Time" name="time" ng-model="tasksEdit.task.time"/>
+    <input value="{{task.time}}" type="time" class="input" placeholder="Time" name="time" ng-model="tasksEdit.task.time"/>
   </div>
   <button class="button is-primary">Submit</button>
   <button ng-click="tasksEdit.handleDelete()" class="button is-danger">Delete</button>
