Added some features

--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -8,7 +8,7 @@
       <div class="card-content">
         <div class="media">
           <div class="media-content">
-            <p class="title is-4">{{ task.title }}</p>
+            <p class="title is-4">{{ task.displayTitle }}</p>
             <p class="title is-4">{{ task.description }}</p>
             <p class="title is-4">{{ task.points }}</p>
             <p class="title is-4">{{ task.dueDate }}</p>
