Made some changes

--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -37,12 +37,16 @@
     <input value="{{task.description}}" class="input" placeholder="Description" name="description" ng-model="tasksEdit.task.description"/>
   </div>
   <div class="field">
-    <label for="dueDate">{{task.dueDate}}</label>
-    <input type="date" class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
+    <label for="description"></label>
+    <input value="{{task.locationTitle}}" class="input" placeholder="Description" name="description" ng-model="tasksEdit.task.locationTitle"/>
+  </div>
+  <div class="field">
+    <label for="dueDate">DueDate</label>
+    <input value="{{task.dueDate}}" type="date" class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
   </div>
   <div class="field">
     <label for="location">Location</label>
-    <input class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
+    <input value="{{task.locationTitle}}" class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
   </div>
   <div class="field">
     <label for="dueDate">Time</label>
