--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,1 +1,21 @@
-<h1>LANDING PAbkjhbvkbkjGE</h1>
+<main>
+  <div class="landing-content has-text-centered is-vcentered">
+    <img src="../assets/image/turtle.svg">
+    <h1 class="landing-title">Turtle To-Do</h1>
+    <h2>Your daily grind. Made grand.</h2>
+    <h3>
+      <a class="button is-primary" ui-sref="login">
+        <i class="fas fa-sign-in-alt"></i>
+        &nbsp
+        Log In
+      </a>
+      or
+      <a class="button is-warning" ui-sref="register">
+        <i class="fas fa-user-plus"></i>
+        &nbsp
+        Sign Up
+      </a>
+    </h3>
+    <h4>An app by the inimitable and indefagitable Alex and Andrew.</h4>
+  </div>
+</main>
