--- a/src/views/auth/edit.html
+++ b/src/views/auth/edit.html
@@ -15,6 +15,6 @@
     <!-- <label for="passwordConfirmation">Password Confirmation</label> -->
     <input class="input" type="hidden" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
   </div>
-
   <button class="button is-primary">Submit</button>
+  <button class="button is-danger" ng-click="usersShow.handleUsersDelete()" class="button">Delete Profile</button>
 </form>
