--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -46,7 +46,7 @@
   </div>
   <div class="field">
     <label for="location">Location</label>
-    <input value="{{task.locationTitle}}" class="input" placeholder="Location" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
+    <input value="{{task.locationTitle}}" class="input" placeholder="{{task.locationTitle}}" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
   </div>
   <div class="field">
     <label for="dueDate">Time</label>
